updated package json with babel preset

--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -40,5 +40,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ],
+    "parserOpts": {
+      "throwIfNamespace": false
+    }
   }
 }
