--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -24,6 +24,7 @@
     "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
+    "parser": "babel-eslint",
     "extends": [
       "react-app",
       "react-app/jest"
